change getLast() to universal method